use full url for search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-site.veselushki.page=http://veselushki.top/page/
+site.url.page=http://veselushki.top/page/
+facebook.url=https://facebook.com/veselushki.top/
 page.from=1
-page.till=3
+page.to=3
