--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ site.url.page=http://veselushki.top/page/
 facebook.url=https://facebook.com/veselushki.top/
 page.from=1
 page.to=3
+
+
+spring.datasource.url=jdbc:mariadb://veselushki.cslvko3su49a.us-west-2.rds.amazonaws.com:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
+spring.datasource.username=veselushki
+spring.datasource.password=vese-lushki
