--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,11 @@ page.from=1
 page.to=3
 
 # DB setup
-#spring.datasource.url=jdbc:mariadb://veselushki.cslvko3su49a.us-west-2.rds.amazonaws.com:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
-#spring.datasource.username=veselushki
-#spring.datasource.password=vese-lushki
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mariadb://veselushki.cslvko3su49a.us-west-2.rds.amazonaws.com:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
+
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
+
 
 # Cron
-cron.send.telegram = * * * ? * *
-cron.save.newPost = * * * ? * *
+cron.send.telegram = * 0/30 * ? * *
+cron.save.newPost = * 0/15 * ? * *
