--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ page.to=3
 
 # DB setup
 spring.datasource.url=jdbc:mariadb://veselushki.cslvko3su49a.us-west-2.rds.amazonaws.com:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
-
+spring.datasource.password=vese-lushki
+spring.datasource.username=veselushki
 #spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/veselushki?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8s
 
 
